--- a/view/css/footer.css
+++ b/view/css/footer.css
@@ -17,7 +17,7 @@
  *
  */
 body{
-	overflow:hidden !important;
+	/*overflow:hidden !important;*/
 }
 
 div#footer ul {
